--- a/app/src/main/res/layout/activity_ownerprofile.xml
+++ b/app/src/main/res/layout/activity_ownerprofile.xml
@@ -68,4 +68,13 @@
         android:layout_marginLeft="120dp"
         android:text="Show my pets" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="false"
+        android:text="sign out"
+        android:layout_below="@+id/button"
+        android:layout_centerInParent="true"/>
+
 </RelativeLayout>
